--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ảnh của tôi</title>
+    <meta charset="UTF-8">
+    <title>Trang web ảnh</title>
   </head>
   <body>
-    <h1>Ảnh được cài sẵn</h1>
+    <h1>Nhấn vào để xem ảnh</h1>
     <a href="anh.jpg" target="_blank">
-      <img src="anh.jpg" width="300" alt="Ảnh hiển thị tại đây">
-    </a>
-  </body>
-</html>
+      <img src="anh.jpg" alt="Ảnh"
