--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Trang web ảnh</title>
+    <title>Xem ảnh</title>
   </head>
   <body>
-    <h1>Nhấn vào để xem ảnh</h1>
-    <a href="anh.jpg" target="_blank">
-      <img src="anh.jpg" alt="Ảnh"
+    <h2><a href="anh.jpg" target="_blank">Bấm vào để xem ảnh</a></h2>
+  </body>
+</html> 
