--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Xem ảnh</title>
+    <title>Ảnh hiển thị</title>
   </head>
   <body>
-    <h2><a href="anh.jpg" target="_blank">Bấm vào để xem ảnh</a></h2>
+    <h2>Ảnh của bạn:</h2>
+    <img src="anh.jpg" alt="Ảnh của bạn" width="100%">
   </body>
-</html> 
+</html>
