--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Ảnh hiển thị</title>
+    <title>Ảnh của tôi</title>
   </head>
   <body>
     <h2>Ảnh của bạn:</h2>
