--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h2>Ảnh của bạn:</h2>
-    <img src="anh.jpg" alt="Ảnh của bạn" width="100%">
+    <img src="Kiem.jpg" alt="Ảnh của bạn" width="100%">
   </body>
 </html>
