--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Ảnh của tôi</title>
+    <title>Bộ ảnh của tôi</title>
   </head>
-  <body>
-    <h2>Ảnh của bạn:</h2>
-    <img src="Kiem.jpg" alt="Ảnh của bạn" width="100%">
+  <body style="margin: 0; padding: 0; background-color: #000;">
+    <img src="A.jpg" alt="" width="100%">
+    <img src="B.jpg" alt="" width="100%">
+    <img src="C.jpg" alt="" width="100%">
+    <img src="D.jpg" alt="" width="100%">
+    <img src="anh.jpg" alt="" width="100%">
+    <img src="Kiem.jpg" alt="" width="100%">
   </body>
 </html>
