--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Bộ ảnh của tôi</title>
-  </head>
-  <body style="margin: 0; padding: 0; background-color: #000;">
-    <img src="A.jpg" alt="" width="100%">
-    <img src="B.jpg" alt="" width="100%">
-    <img src="C.jpg" alt="" width="100%">
-    <img src="D.jpg" alt="" width="100%">
-    <img src="anh.jpg" alt="" width="100%">
-    <img src="Kiem.jpg" alt="" width="100%">
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Thư viện ảnh</title>
+</head>
+<body style="margin: 0; padding: 0; background: #000;">
+  
+  <!-- Danh sách ảnh -->
+  <img src="A.jpg" width="100%">
+  <img src="B.jpg" width="100%">
+  <img src="C.jpg" width="100%">
+  <img src="D.jpg" width="100%">
+  <img src="anh.jpg" width="100%">
+  <img src="Kiem.jpg" width="100%">
+
+</body>
 </html>
