--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Thư viện ảnh</title>
+  <title>Con Trai Hốc Trưởng - Kiểm Nguyễn</title>
 </head>
-<body style="margin: 0; padding: 0; background: #000;">
-  
-  <!-- Danh sách ảnh -->
+<body style="margin: 0; padding: 0; background: #000; color: white; font-family: sans-serif; text-align: center;">
+
+  <h1 style="padding: 20px 0; font-size: 28px;">Con Trai Hốc Trưởng - Kiểm Nguyễn</h1>
+
+  <!-- Hiển thị ảnh toàn trang -->
   <img src="A.jpg" width="100%">
   <img src="B.jpg" width="100%">
   <img src="C.jpg" width="100%">
