--- a/index.html
+++ b/index.html
@@ -1,20 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
   <title>Con Trai Hốc Trưởng - Kiểm Nguyễn</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: black;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 30px;
+      margin: 30px 0;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 2px solid orange;
+      width: 0;
+      animation: typing 3s steps(30, end) forwards, colorChange 4s infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+
+    @keyframes colorChange {
+      0%   { color: red; }
+      25%  { color: yellow; }
+      50%  { color: lime; }
+      75%  { color: cyan; }
+      100% { color: red; }
+    }
+
+    img {
+      width: 100%;
+      max-width: 600px;
+      margin: 10px auto;
+      display: block;
+      border-radius: 12px;
+      box-shadow: 0 0 15px white;
+    }
+
+    #music-btn {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      padding: 10px 14px;
+      border: none;
+      border-radius: 10px;
+      background: white;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 999;
+    }
+  </style>
 </head>
-<body style="margin: 0; padding: 0; background: #000; color: white; font-family: sans-serif; text-align: center;">
+<body>
 
-  <h1 style="padding: 20px 0; font-size: 28px;">Con Trai Hốc Trưởng - Kiểm Nguyễn</h1>
+  <h1>Con Trai Hốc Trưởng - Kiểm Nguyễn</h1>
 
-  <!-- Hiển thị ảnh toàn trang -->
-  <img src="A.jpg" width="100%">
-  <img src="B.jpg" width="100%">
-  <img src="C.jpg" width="100%">
-  <img src="D.jpg" width="100%">
-  <img src="anh.jpg" width="100%">
-  <img src="Kiem.jpg" width="100%">
+  <button id="music-btn" onclick="toggleMusic()">🔊 Tắt nhạc</button>
+  <audio id="bg-music" autoplay loop>
+    <source src="Gay.mp3" type="audio/mpeg">
+    Trình duyệt không hỗ trợ phát nhạc.
+  </audio>
 
+  <!-- Ảnh hiển thị -->
+  <img src="A.jpg" alt="A">
+  <img src="B.jpg" alt="B">
+  <img src="C.jpg" alt="C">
+  <img src="D.jpg" alt="D">
+  <img src="anh.jpg" alt="anh">
+  <img src="Kiem.jpg" alt="Kiem">
+
+  <script>
+    const music = document.getElementById("bg-music");
+    const btn = document.getElementById("music-btn");
+    function toggleMusic() {
+      if (music.paused) {
+        music.play();
+        btn.textContent = "🔊 Tắt nhạc";
+      } else {
+        music.pause();
+        btn.textContent = "🔈 Bật nhạc";
+      }
+    }
+  </script>
 </body>
 </html>
